feat: modify the name of query params, dockerize the service
